syntax = "proto3";

package noctiforge.controlplane;

service ControlPlaneService {
  rpc GetDigestByName(GetDigestByNameRequest) returns (GetDigestByNameResponse);
  rpc SetDigestToName(SetDigestToNameRequest) returns (SetDigestToNameResponse);
}

message GetDigestByNameRequest {
  string key = 1;
}

message GetDigestByNameResponse {
  string digest = 1;
}

message SetDigestToNameRequest {
  string key = 1;
  string digest = 2;
}

message SetDigestToNameResponse {
  bool success = 1;
}
